# notepad

./: .gitignore  .travis-ci.yml  2.projekt-notatnik  2.projekt-notatnik.pro  CMakeLists.txt  Makefile  Notepad.desktop  appimageit.sh  config  notepad.desktop  notepad.pro  org.256Michael.notepad.json  org.256Michal.Notatnik.json  org.usr256Michael.notepad.json  session
build-dir/: metadata  metadata.debuginfo
build-dir/files/: manifest.json
moc/: moc_editmenu.cpp  moc_filemenu.cpp  moc_helpmenu.cpp  moc_mainwindow.cpp  moc_notepadapp.cpp  moc_predefs.h  moc_setsmenu.cpp  moc_tabwidget.cpp  moc_textedit.cpp
repo/: summary
repo/refs/heads/app/org.Michal.Notatnik/x86_64/: master
repo/refs/heads/runtime/org.Michal.Notatnik.Debug/x86_64/: master
snap/: notatnik_source.tar.bz2  snapcraft.yaml
src/: editmenu.cpp  editmenu.hpp  filemenu.cpp  filemenu.hpp  findbar.cpp  findbar.hpp  helpmenu.cpp  helpmenu.hpp  licenceviewer.cpp  licenceviewer.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  notepadapp.cpp  notepadapp.hpp  notepadcard.cpp  notepadcard.hpp  notepadtab.cpp  notepadtab.hpp  setsmenu.cpp  setsmenu.hpp  tabbar.cpp  tabbar.hpp  tabwidget.cpp  tabwidget.hpp  textedit.cpp  textedit.hpp
translations/: notepad_eo.ts  notepad_pl.ts
